re PR c/11207 (ICE with negative index in array element designator)

PR c/11207
	* c-typeck.c (set_init_index): Check for negative index.

(testsuite/)
	* gcc.dg/noncompile/20030818-1.c: New.

From-SVN: r70553